--- a/css/basic.css
+++ b/css/basic.css
@@ -11,7 +11,7 @@ body{font-family:'맑은 고딕','sans-serif';}
 }
 
 /* header */
-#header_wrap{ position: absolute; z-index: 1; background: rgba(123, 223, 242,0.5); width: 100%; height: 80px;}
+#header_wrap{ position: absolute; z-index: 1; background: rgb(178, 247, 239, 0.8); width: 100%; height: 80px;}
 header{}
 header h1{ float: left; margin-top: 20px;}
 
